--- a/cv/index.html
+++ b/cv/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE.html>
+<html>
+  <head>
+    <title></title>
+    <link el="stylesheet"type="text/css"hfref="style.css">
+    </head>
+  <body>
+    <div id="header"></div>
+    <div class="right">
+      <p></p>
+      </div>
+    
+  </body>
+</html>
