--- a/cv/index.html
+++ b/cv/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title></title>
-    <link el="stylesheet"type="text/css"hfref="style.css"></link>
+    <link rel="stylesheet"type="text/css" href="style.css"></link>
     </head>
   <body>
     <div id="header"></div>
