--- a/cv/index.html
+++ b/cv/index.html
@@ -6,10 +6,10 @@
     </head>
   <body>
     <div id="header"></div>
-    <div class="right">
+    <div class="right"></div>
       <div class="left"></div>
       <p></p>
-      </div>
+      
     
   </body>
 </html>
