--- a/cv/index.html
+++ b/cv/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE.html>
 <html>
   <head>
-    <title></title>
+    <title>valentins leibnslauf</title>
     <link rel="stylesheet"type="text/css" href="style.css">
     </head>
   <body>
