--- a/cv/index.html
+++ b/cv/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet"type="text/css" href="style.css">
     </head>
   <body>
-    <div id="header"></div>
+    <div id="header">
+      <h1>valentin(walle)sutterluety</h1>
+    </div>
     <div class="right"></div>
       <div class="left"></div>
       <p></p>
