--- a/cv/index.html
+++ b/cv/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE.html>
 <html>
   <head>
-    <title>valentins leibnslauf</title>
+    <title>Valentins leibnslauf</title>
     <link rel="stylesheet"type="text/css" href="style.css">
     </head>
   <body>
     <div id="header">
-      <h1>valentin(walle)sutterluety</h1>
+      <h1>Valentin(walle)Sutterluety</h1>
     </div>
     <div class="right"></div>
       <div class="left"></div>
