--- a/cv/index.html
+++ b/cv/index.html
@@ -8,7 +8,12 @@
     <div id="header">
       <h1>Valentin(walle)Sutterluety</h1>
     </div>
-    <div class="right"></div>
+    <div class="right">
+      <p>Vorname: valentin</p>
+      <p>Nachname: Sutterlüty</p>
+      <p>Wohnort: Rain 1163 </p>
+    
+    </div>
       <div class="left"></div>
       <p></p>
       
