--- a/cv/index.html
+++ b/cv/index.html
@@ -9,9 +9,11 @@
       <h1>Valentin(walle)Sutterluety</h1>
     </div>
     <div class="right">
-      <p>Vorname: valentin</p>
-      <p>Nachname: Sutterlüty</p>
-      <p>Wohnort: Rain 1163 </p>
+      <ol>
+        <li>Vorname: valentin</li>
+        <li>Nachname: Sutterlüty</li>
+        <li> Wohnort: Rain 1163 </li>
+      </ol>
     
     </div>
       <div class="left"></div>
