--- a/cv/index.html
+++ b/cv/index.html
@@ -13,7 +13,7 @@
         <li>Vorname: valentin</li>
         <li>Nachname: Sutterlüty</li>
         <li> Wohnort: Rain 1163 </li>
-        <li>geburtstag:14.7.2001</li>
+        <li>Geburtstag:14.7.2001</li>
       </ol>
     
     </div>
