--- a/cv/index.html
+++ b/cv/index.html
@@ -20,6 +20,11 @@
       <div class="left">
     
     <img src="http://www.fussballoesterreich.at/netzwerk/imagedownload/670725461856634215_674880172435477229-0-120-hk0qf8P.jpg ">
+        <h2> Ausbildung</h2>
+        <ol>
+          <li>volksschule egg</li>
+          <li>hs egg</li>
+        </ol>
     
     </div>
     <li> @ all rigths reserved to walleisteinemaschine/GMBH </li>
