--- a/cv/index.html
+++ b/cv/index.html
@@ -6,7 +6,7 @@
     </head>
   <body>
     <div id="header">
-      <h1>Valentin(walle)Sutterluety</h1>
+      <h1>Valentin Sutterluety</h1>
     </div>
     <div class="right">
       <ol>
