--- a/cv/index.html
+++ b/cv/index.html
@@ -14,6 +14,7 @@
         <li>Nachname: Sutterlüty</li>
         <li> Wohnort: Rain 1163 </li>
         <li>Geburtstag:14.7.2001</li>
+        <li>telefonnummer:6006</li>
       </ol>
     
     </div>
