--- a/cv/index.html
+++ b/cv/index.html
@@ -14,7 +14,7 @@
         <li>Nachname: Sutterlüty</li>
         <li> Wohnort: Rain 1163 </li>
         <li>Geburtstag:14.7.2001</li>
-        <li>telefonnummer:6006</li>
+        <li>Telefonnummer:6006</li>
       </ol>
     
     </div>
@@ -25,6 +25,7 @@
         <ol>
           <li>volksschule egg</li>
           <li>hs egg</li>
+          <li>borg egg(6bn)</li>
         </ol>
         <h3>Hobbies</h3>
         <ol> 
