--- a/cv/index.html
+++ b/cv/index.html
@@ -9,6 +9,7 @@
       <h1>Valentin Sutterluety</h1>
     </div>
     <div class="right">
+      <h1>Daten</h1>
       <ol>
         <li>Vorname: valentin</li>
         <li>Nachname: Sutterlüty</li>
