--- a/cv/index.html
+++ b/cv/index.html
@@ -31,7 +31,7 @@
         <h3>Hobbies</h3>
         <ol> 
           <li>Tisch/fussball(Fc Mittelwald U16)</li>
-          <li>Waldhorn(Musikverein Egg</li>
+          <li>Waldhorn(Musikverein Egg)</li>
           <li>Klettern</li>
           <li>Skifahren</li>
           
