--- a/cv/index.html
+++ b/cv/index.html
@@ -36,6 +36,12 @@
           <li>Skifahren</li>
           
        </ol>
+        <h4>ich spreche</h4>
+        <ol>
+          <li>deutsch</li>
+          <li>englisch</li>
+          <li>spanisch</li>
+        </ol>
     
     </div>
     <li> @ all rigths reserved to walleisteinemaschine/GMBH </li>
