--- a/cv/index.html
+++ b/cv/index.html
@@ -22,7 +22,7 @@
       <div class="left">
     
     <img src="http://www.fussballoesterreich.at/netzwerk/imagedownload/670725461856634215_674880172435477229-0-120-hk0qf8P.jpg ">
-        <h2> Ausbildung</h2>
+        <h2>Schulische Laufbahn</h2>
         <ol>
           <li>Volksschule egg</li>
           <li>Hs egg</li>
